# Steep-Neptune

./: .gitignore  CMakeLists.txt  README.md
BurstSteady/: .gitignore  BurstSteady.sln
BurstSteady/BurstSteady/: BurstSteady.csproj  Program.cs
BurstSteady/BurstSteady/Properties/: AssemblyInfo.cs
EverydayMoose/: CMakeLists.txt  EverydayMoose.i
GoldenCat/: CMakeLists.txt
GoldenCat/src/: GoldenCat.cpp  GoldenCat.h
